# Filer

./: CMakeLists.txt  Filer.sln
Filer/: Filer.vcxproj
proj/: CMakeLists.txt
proj/Filter/: CMakeLists.txt  main.cpp
src/core/: fileUtils.h
